[package]
name = 'enterprise-sample'
version = '3.0.0'
description = 'A supply chain platform for a decentralized consortium (sample project).'
build = 'build.rs'
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://github.com/substrate-developer-hub/substrate-enterprise-sample/blob/master/README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-enterprise-sample'
license = 'Unlicense'

[[bin]]
name = 'enterprise-sample'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
 substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# local dependencies
enterprise-sample-runtime = { path = '../runtime', version = '3.0.0' }

# Substrate dependencies
frame-benchmarking = '3.0.0'
frame-benchmarking-cli = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
sc-basic-authorship = '0.9.0'
sc-cli = { features = ['wasmtime'], version = '0.9.0' }
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-aura = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-finality-grandpa = '0.9.0'
sc-rpc = '3.0.0'
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-transaction-pool = '3.0.0'
sp-api = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-aura = '0.9.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sp-transaction-pool = '3.0.0'
substrate-frame-rpc-system = '3.0.0'
parity-util-mem = '0.9.0'
